text wrap fix sidenav search item overflow

--- a/src/components/Sidenav.css
+++ b/src/components/Sidenav.css
@@ -574,6 +574,7 @@ html.winOS .sidenav > .sidenav_wrapper > .sidenav_content > .search > .search_re
 
 .sidenav > .sidenav_wrapper > .sidenav_content > .search > .search_results > .results > .result > .type > .text {
     line-height: 1.4;
+    word-break: break-word;
 }
 
 .sidenav
